Fix navigation dropdown menu items that are too big.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .navbar-brand,
-.navbar-nav li a {
+.navbar-nav > li > a {
   line-height: 66px;
   height: 66px;
   padding-top: 0;
